# Jazz-Jackrabbit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  Vagrantfile  build.sh  configuracion.yaml  configuracion.yml  install.sh  main.cpp  run_protocol_tests.sh  vagrant_config_audio.txt
assets/editor/: resources.qrc
assets/editor/img/: items.yaml  resources.qrc
assets/menu/: resources.qrc
assets/menu/img/: personajes.yaml  sprites.yaml
assets/sprites/efectos/: explosion.yaml
assets/sprites/enemigos/: enemigos.yaml
assets/sprites/escenarios/: escenarios.yaml
assets/sprites/fuente/: fuente.yaml
assets/sprites/items/: items.yaml
assets/sprites/personajes/: personajes.yaml
client/: cliente.cpp  cliente.h  cliente_deserializador.h  cliente_enviador.cpp  cliente_enviador.h  cliente_main.cpp  cliente_protocolo.cpp  cliente_protocolo.h  cliente_recibidor.cpp  cliente_recibidor.h  cliente_serializador.cpp  cliente_serializador.h  gameloop.cpp  gameloop.h  lobby.cpp  lobby.h  lobby_deserializador.h  lobby_enviador.cpp  lobby_enviador.h  lobby_recibidor.h  lobby_serializador.cpp  stdin_handler.cpp  stdin_handler.h
client/juego/: cliente.cpp  cliente_enviador.h  cliente_serializador.cpp  juego.cpp  juego.h
client/lobby/: lobby_deserializador.h  lobby_recibidor.cpp
client/vista_juego/: administrador_vista_juego.cpp  administrador_vista_juego.h  animaciones_posibles.h  entrada_juego.cpp  entrada_juego.h  lector_texturas.cpp  lector_texturas.h  objeto_animado.cpp  objeto_animado.h  personaje.cpp  personaje.h  personaje_jazz.cpp  personaje_jazz.h  personaje_lori.cpp
client/vista_menu/: CMakeLists.txt  boton_animado.cpp  boton_animado.h  boton_menu.cpp  boton_menu.h  constantes_menu.h  main.cpp  manejador_sprites.cpp  manejador_sprites.h  menu_crear_partida.cpp  menu_crear_partida.h  menu_principal.cpp  menu_principal.h  menu_selec_jugador.cpp  menu_selec_jugador.h  menu_selec_mapa.cpp  menu_selec_mapa.h  ventana_inicial.cpp  ventana_inicial.h
common/: comando_comenzar_dto.h  comando_unir_dto.cpp  config.cpp  config.h  constantes.h  liberror.cpp  liberror.h  queue.h  resolvererror.h  socket.cpp  socket.h  thread.h
documentacion/: documentacion_tecnica.md  manual_de_proyecto.md  manual_de_usuario.md
juego/: manejadorEscenario.cpp  personaje.cpp
juego/assets/: spawnpoint.h
lobby/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lobby/assets/: resources.qrc
logica_juego/: gameloop.cpp
server/: aceptador.cpp  aceptador_cliente.cpp  aceptador_cliente.h  comunicador_cliente.cpp  comunicador_cliente.h  enviador_cliente.h  juego.cpp  juego.h  logica_juego.h  monitor_partida.cpp  monitor_partida.h  monitor_partidas.cpp  monitor_partidas.h  monitor_snapshots.cpp  recibidor_cliente.cpp  recibidor_cliente.h  servidor.cpp  servidor.h  servidor_deserializador.h  servidor_main.cpp  servidor_protocolo.cpp  servidor_protocolo.h
src/client/: cliente_main.cpp
src/client/editor/: CMakeLists.txt  barra_menu.cpp  barra_menu.h  main.cpp  (+10 more)
src/client/vista_juego/: CMakeLists.txt  accion_juego_dto.h  admin_balas.cpp  admin_balas.h  admin_enemigos.cpp  admin_enemigos.h  admin_explosiones.cpp  admin_explosiones.h  admin_recogibles.cpp  admin_recogibles.h  admin_sonidos.cpp  admin_sonidos.h  administrador_vista_juego.cpp  administrador_vista_juego.h  bloque_escenario.cpp  bloque_escenario.h  camara.cpp  camara.h  entrada_juego.cpp  entrada_juego.h  fondo_escenario.cpp  fondo_escenario.h  hud.cpp  hud.h  lector_texturas.cpp  lector_texturas.h  objeto_animado.cpp  objeto_animado.h  pantalla_carga.cpp  pantalla_carga.h  pared_escenario.cpp  pared_escenario.h  personaje.cpp  personaje.h  personaje_jazz.cpp  personaje_jazz.h  personaje_lori.cpp  personaje_lori.h  personaje_spaz.cpp  personaje_spaz.h  (+16 more)
src/common/: accion_juego_dto.h  comando_comenzar_dto.cpp  comando_comenzar_dto.h  comando_crear_dto.cpp  comando_crear_dto.h  comando_dto.cpp  comando_dto.h  comando_unir_dto.cpp  comando_unir_dto.h  comando_validar_dto.h  config.cpp  config.h  constantes.h  estado_personaje.h  resolvererror.h  snapshot_dto.cpp  snapshot_dto.h  socket.cpp  socket.h  socket_abstracto.h  socket_dummy.cpp  socket_dummy.h  thread.h  tipo_arma.h  tipo_bloque_escenario.h  tipo_comando.h  tipo_enemigo.h  tipo_escenario.h  tipo_personaje.h  tipo_recogible.h  validador_de_mapas.cpp  validador_de_mapas.h
src/mapas/: big.yaml  carrotus.yaml  castle.yaml  laberinto.yaml  pruebas.yaml
src/server/: aceptador.cpp  aceptador.h  comando_server.cpp  comando_server.h  comando_server_crear.cpp  comando_server_crear.h  comando_server_generico.cpp  comando_server_generico.h  comando_server_unir.cpp  comando_server_unir.h  comando_server_validar.cpp  comando_server_validar.h  comunicador_cliente.cpp  comunicador_cliente.h  enviador_cliente.cpp  enviador_cliente.h  gestor_partidas.cpp  gestor_partidas.h  logica_juego.cpp  logica_juego.h  monitor_mapa_clientes.cpp  monitor_mapa_clientes.h  monitor_partidas.cpp  monitor_partidas.h  monitor_snapshots.cpp  monitor_snapshots.h  partida.cpp  partida.h  recibidor_cliente.cpp  recibidor_cliente.h  servidor.cpp  servidor.h  servidor_deserializador.cpp  servidor_deserializador.h  servidor_main.cpp  servidor_protocolo.cpp  servidor_protocolo.h  servidor_protocolo_serializador.cpp  servidor_protocolo_serializador.h  servidor_serializador.cpp  (+1 more)
src/server/logica_juego/: CMakeLists.txt  cliente_juego.cpp  cliente_juego.h  enemigo.cpp  enemigo.h  esqueleto.cpp  esqueleto.h  gameloop.cpp  gameloop.h  lagarto.cpp  lagarto.h  manejadorEscenario.cpp  manejadorEscenario.h  murcielago.cpp  murcielago.h  personaje.cpp  personaje.h
src/server/logica_juego/assets/: bala.h  balaInfinita.cpp  balaInfinita.h  bala_arma_1.cpp  bala_arma_1.h  bala_arma_2.cpp  bala_arma_2.h  bala_arma_3.cpp  bala_arma_3.h  bloqueEscenario.cpp  bloqueEscenario.h  recogible.cpp  recogible.h  spawnpoint.h
test/: CMakeLists.txt  acutest.h
test/protocolo/: test_protocolo_cliente.cpp  test_protocolo_lobby.cpp  test_protocolo_servidor.cpp  test_protocolo_snapshot.cpp  test_utils.cpp
(+68 files in other folders)
